	-> add feature to move pages of document by image filename list; start either via Main Menu->Document or the Document-Manager context menu on a loaded document
	
1.7.1:
	-> fix scrollbar layout issue in tools widget
	-> fix broken export for local documents
	-> CITlab HTR training obeys Unicode 12.1.0 character specification instead of Unicode 6.2
	-> usability: show configuration before running CITlabAdvanced layout analysis
	
1.8.0:
	-> additional parameters for Text2Image
	-> new sync txt-files and PAGE-XMLs with existing doc dialog (including: apply txt-files to existing layouts)
	-> text editor: 'Backspace' and 'Ctrl+Return' behavior - moves text one line up or down; Use case: applying txt-files to existing layouts may start at the wrong line which can be corrected
	-> HTR+ training using base models
	-> enable gzip encoding for HTTP API connection
	-> new HTR options regarding the line segments produced by CITlab HTR
		-> "Do polygon simplification": reduce the complexity of line segments, saving bandwidth and storage space. 
		-> "Keep original line polygons": copy the recognized text to the line segments without altering them.
	-> fix bug that caused image rotation according to EXIF thumbnail section
	-> remove small text-regions feature
	-> async page/transcript loading (do not show progress bar anymore)
	-> quickload of collection by id
	-> CITlab HTR: creating and storing ConfMats can be disabled if keyword spotting functionality is not required
	-> HTR models detail view bugfix: final CER values shown in text fields did not match the best net stored in all cases 
	
1.8.1:
	-> tag-search: minimum number of characters in tagname reduced to 1 (to be able to search for tags like e.g. "hi" or "p")
	-> bugfix: do *not* select underlying shape if image is moved with left mouse button
	-> ground truth management features
	-> rename test set to validation set as it is the more accurate term
	